--- a/.github/workflows/h-microkernel-github-actions.yml
+++ b/.github/workflows/h-microkernel-github-actions.yml
@@ -1,13 +1,18 @@
-name: h-microkernel-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
+name: h-microkernel-ci-cd
+run-name: ${{ github.actor }} testing on push
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      
+      - name: Set up GCC
+        uses: egor-tensin/setup-gcc@v1
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          version: latest
+          platform: x64
+          
+      - name: Build
+        shell: bash
+        run: gcc h-microkernel.c -o h-microkernel.exe
