--- a/.github/workflows/h-microkernel-github-actions.yml
+++ b/.github/workflows/h-microkernel-github-actions.yml
@@ -7,12 +7,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up GCC
-        uses: egor-tensin/setup-gcc@v1
-        with:
-          version: latest
-          platform: x64
-          
       - name: Build
         shell: bash
         run: gcc h-microkernel.c -o h-microkernel.exe
+
+      - name: Deploy
+        run: ./microkernel.exe
