YAML file with trigger on pull request

--- a/.github/workflows/h-microkernel-github-actions.yml
+++ b/.github/workflows/h-microkernel-github-actions.yml
@@ -4,8 +4,9 @@ run-name: ${{ github.actor }} testing on push
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request: 
+    branches: [main]
 
 jobs:
 
